MonetDB/src/mal/Tests/tst150.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## more complex typechecking, it should not complain at compile time
#command lookup(nme:str):bat[str,str] = CMDlookup;
!ERROR: address of function CMDlookup not found
command Admin.lookup(nme:str):bat[str,str] = CMDlookup;	#0:(CMDlookup:bat[str,str]->2)(nme:str->1)
#function sample(nme:str, val:any):bit;
#   b := lookup(nme); #find a bat
#   h := select(b,val,val);
#   t := count(h);
#   x := print(t);
#   y := print(val);
#end function;
function Admin.sample(nme:str,val:any):bit;	#0:(sample:bit->0)(nme:str->1)(val:any->2)
	b := Admin.lookup(nme);	#1:(b:bat[str,str]->3)(nme:str->1)
	h := select(b,val,val);	#2 unknown:(h:any->4)(b:bat[str,str]->3)(val:any->2)(val:any->2)
	t := count(h);	#3 unknown:(t:any->5)(h:any->4)
	x := system.print(t);	#4:(x:int->6)(t:any->5)
	y := system.print(val);	#5:(y:int->7)(val:any->2)
end function;	#6:
#
>